@@ -64,9 +64,15 @@ move:
       domain: device_tracker
   fields:
     location:
-      name: Location
+      name: Named Location
       description: Where to move the device tracker to.
-      required: true
       example: 'home'
       selector:
         text:
+    gps:
+      name: GPS Location
+      description: Which coordinates to move the device tracker to.
+      example: '{"latitude": -27.9699373, "longitude": 153.4081865}'
+      selector:
+        location:
+          radius: false
