@@ -1,6 +1,7 @@
 0.9.0b12:
   Fix fan support.
   Fix cover service calls.
+  Add GPS to device tracker
 0.9.0b11:
   Fix up light support.
   Fix race condition in meta data write
